[project]
name = ""
version = ""
description = ""
authors = [
    {name = "João Gabriel Lima", email = "joaogabriellima.eng@gmail.com"},
]
dependencies = [
    "fastapi>=0.78.0",
    "rq>=1.10.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
